# ArduinoSerial

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
